python/testData/inspections/PyUnresolvedReferencesInspection/UnusedUnresolvedNameImportedSeveralTimes/a.py
<warning descr="Unused import statement">from my_module import <error descr="Cannot find reference 'eggs' in 'my_module.py'">eggs</error></warning>
<warning descr="Unused import statement">from my_module import <error descr="Cannot find reference 'eggs' in 'my_module.py'">eggs</error></warning>
